Overflow fix 3index-style.css

--- a/index-style.css
+++ b/index-style.css
@@ -3,10 +3,10 @@
   padding: 0px;
   box-sizing: border-box;
   font-family: "Special Gothic", sans-serif;
-  overflow-x: hidden ! important;
 }
 .body {
   position: relative;
+  overflow-x:hidden;
 }
 
 /* navbar */
